clusters/my-cluster/apps/lern/overlays/ingress[old]/acert_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lern-app-ingress
  namespace: lern
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "carloshost.ydns.eu"
    secretName: tls-secret
  rules:
  - host: "carloshost.ydns.eu"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: learn-app-svc-o1
            port:
              number: 80
