clusters/my-cluster/apps/lern/overlays/ingress[old]/proxyContour.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: learn-app-httpproxy
  namespace: lern
spec:
  virtualhost:
    fqdn: carloshost.ydns.eu
  routes:
    - conditions:
      - prefix: /dep1
      services:
        - name: learn-app-svc-o1
          port: 80
    - conditions:
      - prefix: /dep2
      services:
        - name: learn-app-svc-o2
          port: 80
    - conditions:
      - prefix: /dep3
      services:
        - name: learn-app-svc-o3
          port: 80
